# setlyze

./: .gitignore  CMakeLists.txt  INSTALL  MANIFEST.in  Makefile  README  README.md  README.rst  build-win32-exe.py  distance_gen.py  push.sh  requirements.txt  setlyze.nsi  setlyze.pyw  setlyze_docs.geany  setup-win.py  setup.py  win32.py
cmake/: cpack_setlyze.cmake
data/icons/: setlyze.ico.xcf
docs/source/: conf.py  design_parts_data.rst  design_parts_docs.rst  design_parts_index.rst  distribution.rst  index.rst  installation.rst  legal.rst  references.rst  setlyze_modules_analysis.rst  user_manual.rst
graphics/: README
icons/: setlyze.desktop
scripts/: setlyze.in
setlyze/: __init__.py  config.py  database.py  gui.py  locale.py  main.py  report.py  sender.py  stats.py  std.py
setlyze/analysis/: __init__.py  attraction_inter.py  attraction_intra.py  batch.py  common.py  relations.py  spot_preference.py
setlyze/docs/: .buildinfo  about_us.html  design_parts_data.html  design_parts_docs.html  design_parts_gui.html  design_parts_index.html  developer_guide.html  genindex.html  gimaris.html  index.html  intro.html  legal.html  objects.inv  py-modindex.html  references.html  searchindex.js  setlyze.pyw.html  setlyze_exe.html  setlyze_modules.html  setlyze_modules_analysis.html  testing_optimization.html  user_manual.html
setlyze/glade/: load_data.glade  preferences.glade  select_batch_analysis.glade
setlyze/help/: help-contents.html  main.css
source/: about_us.rst  conf.py  design_parts_docs.rst  design_parts_index.rst  developer_guide.rst  distribution.rst  index.rst  references.rst  user_manual.rst
src/: CMakeLists.txt  build-win32-exe.py  setlyze.pyw
src/doc/: make.bat
src/doc-src/: Makefile  make.bat  postgresql_setl_db_schema.sql  technical_design-0.1.odg
src/doc-src/source/: about_us.rst  conf.py  design_parts_docs.rst  design_parts_index.rst  developer_guide.rst  distribution.rst  gimaris.rst  index.rst  legal.rst  setlyze_modules_analysis.rst  usecases.rst  user_manual.rst
src/doc-src/source/setlyze/: database.rst  gui.rst
src/doc-src/source/setlyze/analysis/: batch.rst  common.rst  relations.rst  spot_preference.rst
src/doc/source/: about_us.rst  setlyze_docs.geany
src/doc/source/setlyze/analysis/: relations.rst
src/setlyze/: config.py  database.py  gui.py  locale.py  report.py  std.py
src/setlyze/analysis/: attraction_inter.py  attraction_intra.py  batch.py  common.py  relations.py  spot_preference.py
src/setlyze/docs/: design_parts_data.html  design_parts_docs.html  design_parts_index.html  objects.inv  py-modindex.html  search.html  setlyze_modules.html  testing_optimization.html  usecases.html
src/setlyze/docs/_modules/: index.html
src/setlyze/docs/_modules/setlyze/: database.html  gui.html
src/setlyze/docs/_modules/setlyze/analysis/: attraction_inter.html  spot_preference.html
src/setlyze/docs/_sources/: about_us.txt  distribution.txt  index.txt  setlyze_modules.txt
src/setlyze/docs/_sources/setlyze/analysis/: spot_preference.txt
src/setlyze/docs/doctrees/: about_us.doctree  design_parts_data.doctree  design_parts_docs.doctree  design_parts_index.doctree  developer_guide.doctree  distribution.doctree  environment.pickle  gimaris.doctree  index.doctree  legal.doctree  references.doctree  setlyze_modules.doctree  setlyze_modules_analysis.doctree  testing_optimization.doctree  usecases.doctree  user_manual.doctree
src/setlyze/docs/doctrees/setlyze/: config.doctree  database.doctree  gui.doctree  locale.doctree  std.doctree
src/setlyze/docs/doctrees/setlyze/analysis/: attraction_inter.doctree  attraction_intra.doctree  batch.doctree  common.doctree  relations.doctree  spot_preference.doctree
src/setlyze/docs/html/: .buildinfo  about_us.html  design_parts_data.html  design_parts_docs.html  design_parts_index.html  developer_guide.html  distribution.html  genindex.html  gimaris.html  index.html  legal.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js  setlyze_modules.html  setlyze_modules_analysis.html  testing_optimization.html  usecases.html  user_manual.html
src/setlyze/docs/html/_modules/: index.html
src/setlyze/docs/html/_modules/setlyze/: config.html  database.html  gui.html  locale.html  report.html  std.html
src/setlyze/docs/html/_modules/setlyze/analysis/: attraction_inter.html  attraction_intra.html  batch.html  common.html  spot_preference.html
src/setlyze/docs/html/_sources/: about_us.txt  design_parts_data.txt  design_parts_docs.txt  developer_guide.txt  distribution.txt  testing_optimization.txt  user_manual.txt
src/setlyze/docs/html/_sources/setlyze/: config.txt  database.txt  gui.txt
src/setlyze/docs/html/_sources/setlyze/analysis/: attraction_inter.txt  attraction_intra.txt  relations.txt
src/setlyze/docs/html/setlyze/: config.html  database.html  gui.html  locale.html  report.html  std.html
src/setlyze/docs/html/setlyze/analysis/: attraction_inter.html  attraction_intra.html  batch.html  common.html  relations.html  spot_preference.html
src/setlyze/docs/setlyze/: database.html  gui.html  locale.html
src/setlyze/docs/setlyze/analysis/: attraction_intra.html  relations.html  spot_preference.html
src/setlyze/glade/: load_data.glade  preferences.glade  repeat_analysis.glade  report.glade  select_analysis.glade  select_batch_analysis.glade  window_select_analysis.glade
test/: spot_distances_intra.csv  test-distances.py
test-data/: SETL_localities.csv  SETL_plates.csv  SETL_species.csv
test-data/CSV/: SETL_localities.csv  SETL_plates.csv  SETL_records.csv  (+1 more)
tests/: spot_distances_inter.csv  test-timeit.py  test_std.py
win32/: setlyze_setup_modern.nsi
(+51 files in other folders)
